# Tamara

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml  cmake.yml  index.html  index.md  params.json
.github/workflows/: c-cpp.yml  cmake.yml
include/: Builtins.h  Curl.h  Environment.h  Environment_packages.h  Lval.h  Maths.h  ParserDefinition.h  basicTypes.h
libs/: CMakeLists.txt
src/: Builtins.c  Environment.c  Environment_packages.c  Lval.c  ParserDefinition.c  main.c
stdlib/: conditionals.ta  curl.ta  exception.ta  file.ta  genann.ta  math.ta  mutableobj.ta  oop.ta  os.ta  std.ta  tamaraStdLib.ta  unittest.ta
tests/: conditionals.ta  exceptionHandling.ta  fileIo.ta  mathTest.ta  oop.ta  scope.ta
